@@ -402,13 +402,13 @@ private:
                           const __false_type& /*_IsIntegral*/) {
 #else /* _STLP_MEMBER_TEMPLATES */
   void insert(iterator __position, const value_type* __first, const value_type* __last) {
-    _Self __tmp(__first, __last);
+    _Self __tmp(__first, __last, get_allocator());
     splice(__position, __tmp);
   }
   void insert(iterator __position, const_iterator __first, const_iterator __last) {
 #endif /* _STLP_MEMBER_TEMPLATES */
     //We use a temporary list to avoid the auto reference troubles (infinite loop)
-    _Self __tmp(__first, __last);
+    _Self __tmp(__first, __last, get_allocator());
     splice(__position, __tmp);
   }
   
